--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "dependencies": {
     "axios": "^0.17.1",
     "react": "^16.2.0",
+    "react-axios": "^2.0.0",
+    "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.17",
+    "redux": "^3.7.2",
+    "react-router": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
